test(backend): chuẩn hóa unit test service lần cuối